[package]
name = "chip8"
version = "0.1.0"
authors = ["Tjccs <tiago.jccs@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
rand = "0.7.3"
winit = "0.23.0"
wgpu = "0.6.2"
futures = "0.3.8"
